--- a/Agriculture/Recommendation_System/DecisionTree.ipynb
+++ b/Agriculture/Recommendation_System/DecisionTree.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 55,
    "id": "e09d85ad-d287-48af-b2b5-ec58870755c9",
    "metadata": {},
    "outputs": [],
@@ -53,7 +53,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 56,
    "id": "faa6d90b-905a-46db-879c-307d0374ed06",
    "metadata": {},
    "outputs": [],
@@ -88,7 +88,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 57,
    "id": "bd816455-51a1-41eb-a228-af5ef3676c18",
    "metadata": {},
    "outputs": [],
@@ -219,7 +219,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 58,
    "id": "2678198d-da09-456f-9b30-5f5dcb786eca",
    "metadata": {},
    "outputs": [],
@@ -236,7 +236,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 59,
    "id": "f5310874-4b47-400c-a0b7-b90305eac4e0",
    "metadata": {},
    "outputs": [],
@@ -254,7 +254,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 60,
    "id": "88cf29d8-46ed-48b8-bfa2-432f7af84261",
    "metadata": {},
    "outputs": [],
@@ -272,7 +272,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 61,
    "id": "74e87823-6dc2-4a0e-ad1c-7a6b8b98ea00",
    "metadata": {},
    "outputs": [],
@@ -287,7 +287,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 62,
    "id": "134e6e02-e258-41dd-9cc6-5d7c7798b975",
    "metadata": {},
    "outputs": [],
@@ -306,7 +306,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 63,
    "id": "54411b6c-50ed-4482-b3d7-a7a2bf715c55",
    "metadata": {},
    "outputs": [],
@@ -321,7 +321,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 64,
    "id": "5ec90c3c-3609-456a-9ab3-2d391dabe81a",
    "metadata": {},
    "outputs": [],
@@ -360,7 +360,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 65,
    "id": "53ee7429-50b9-4491-a323-2200cb37382a",
    "metadata": {},
    "outputs": [],
@@ -391,7 +391,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 66,
    "id": "68c9ee05-a9eb-40d7-b427-eae16beabf42",
    "metadata": {},
    "outputs": [
@@ -464,10 +464,10 @@
       "Enter SPM:  180\n",
       "Enter N:  90\n",
       "Enter P:  50\n",
-      "Enter K:  43\n",
-      "Enter temperature:  22\n",
+      "Enter K:  50\n",
+      "Enter temperature:  20\n",
       "Enter humidity:  80\n",
-      "Enter ph:  7\n",
+      "Enter ph:  6\n",
       "Enter rainfall:  350\n"
      ]
     },
@@ -480,6 +480,7 @@
       "Recommended Fertilizers: Urea, DAP, MOP\n",
       "🧑‍🌾 **Best Soil Type:** Clayey soil, high water retention\n",
       "🐞 **Common Pest:** Brown Plant Hopper | 🌿 **Disease:** Blast Disease\n",
+      "🛡 **Prevention Methods:** Use pheromone traps, spray Neem oil\n",
       "Results Using Gini\n",
       "Predicted values:\n",
       "Confusion Matrix: \n",
